chore: Correction du gap entre les projets

--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -63,7 +63,7 @@
    display: flex;
    flex-direction: column;
    align-items: center;
-   gap: 200px;
+   gap: 250px;
    margin-top: 150px;
 }
 
